hopefully prevent mobile scroll overflow

--- a/website/public/global.css
+++ b/website/public/global.css
@@ -19,6 +19,9 @@ html {
 
 body{
 	font-family: 'Comic Neue';
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
 
 button,
